correct button add anchor on collapse/uncollapse

--- a/src/ui/assets/css/style.css
+++ b/src/ui/assets/css/style.css
@@ -45,6 +45,20 @@ img {
 }
 
 .panel-heading:hover {
-    text-decoration: underline;
+    text-decoration:  underline;
     cursor: pointer;
+}
+.btn-bottom-right {
+    height: 20px;
+    margin-top: -21px;
+    margin-right: 1px;
+    line-height: 5px;
+}
+
+button > a {
+    color: white;
+}
+button > a:hover{
+    text-decoration: none;
+    color: cornflowerblue;
 }
